# grinder-maker

./: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: tauri-windows.yml
public/tiles/: meta.json
scripts/: generate-tiles.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  slider.tsx
src/lib/: auto-route.ts
